# sisop2-chat-sockets

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
client/: CMakeLists.txt
client/sources/: ClientDefinitions.h  main.cpp
client/sources/CommunicationManager/: ClientCommunicationManager.cpp  ClientCommunicationManager.h
client/sources/MessagesManager/: ClientMessagesManager.cpp  ClientMessagesManager.h
client/sources/UI/: ClientUI.cpp  ClientUI.h
client/tests/: CMakeLists.txt  ClientCommunicationManagerTests.cpp  ClientMessagesManagerTests.cpp  ClientUITests.cpp
front/: CMakeLists.txt
front/sources/: FrontCommunicationManager.cpp  FrontCommunicationManager.h  FrontDefinitions.h  main.cpp
server/: CMakeLists.txt
server/sources/: ServerDefinitions.h  definitions.h  main.cpp
server/sources/CommunicationManager/: ServerCommunicationManager.cpp  ServerCommunicationManager.h
server/sources/ElectionManager/: ServerElectionManager.cpp  ServerElectionManager.h
server/sources/GroupsAccessControl/: GroupsAccessControl.cpp  GroupsAccessControl.h
server/sources/GroupsManager/: ServerGroupsManager.cpp  ServerGroupsManager.h
server/sources/MessagesManager/: ServerMessagesManager.cpp  ServerMessagesManager.h
server/sources/Persistency/: ServerPersistency.cpp  ServerPersistency.h
server/tests/: CMakeLists.txt  ServerCommunicationManagerTests.cpp  ServerGroupsManagerTests.cpp  ServerMessagesManagerTests.cpp  ServerPersistencyTests.cpp
shared/: CMakeLists.txt
shared/sources/: SharedDefinitions.cpp  SharedDefinitions.h
shared/sources/Message/: Message.cpp  Message.h
shared/sources/Packet/: Packet.h
shared/tests/: CMakeLists.txt  MessageTests.cpp  PacketTests.cpp
